Added /config/MAC & modified README

--- a/views/phone.haml
+++ b/views/phone.haml
@@ -6,5 +6,5 @@
         %br
     %br
     %input{:type => "hidden", :name => "id", :value => @phone[:id] }
-    %input{:value => "Enregistrer", :type=>"submit"}
+    %input{:value => "Save", :type=>"submit"}
 
