Added phones keys

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,10 +1,10 @@
 %h2 Phones list
 %table{:border => 0}
     %tr
-    %td{:align => "center"} Numero
-    %td{:align => "center"} Nom
+    %td{:align => "center"} Number
+    %td{:align => "center"} Name
     %td{:align => "center"} E-mail
-    %td{:align => "center"} Adresse MAC
+    %td{:align => "center"} MAC address
     %tr
     %td
     - @phones.each do |phone|
