--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,7 @@
 %html
   %head
     %title Dring
+    %script{:type => "text/javascript", :src => "/javascript/phones.js"}
     %body
       = yield
 
